# hidra

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: enumerate.rs  read_async.rs  read_input.rs
src/: device_info.rs  error.rs  lib.rs  maybe_future.rs  report_info.rs  test_util.rs
src/backend/: hidraw.rs  macos.rs  mod.rs  nusb.rs  reactor.rs  webhid.rs  windows.rs
src/descriptor/: build.rs  items.rs  mod.rs  parse.rs
src/usb/: mod.rs
src/webhid/: mod.rs
