[package]
name = "hidra"
version = "0.1.0"
edition = "2021"
description = "Pure Rust HID library."
license = "MIT"
repository = "https://github.com/carlossless/hidra"
keywords = ["hid", "hidapi", "usb", "webhid", "hidraw"]
categories = ["hardware-support", "api-bindings", "wasm"]

[features]
default = []
# USB-transport backend built on nusb (pure Rust).
nusb = ["dep:nusb"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nusb = { version = "0.2.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_Properties",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_UI_Shell_PropertiesSystem",
]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.123"
js-sys = "0.3.100"
wasm-bindgen-futures = "0.4.73"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.100"
features = [
    "Window",
    "Navigator",
    "DomException",
    "Event",
    "EventTarget",
    "Hid",
    "HidDevice",
    "HidDeviceFilter",
    "HidDeviceRequestOptions",
    "HidConnectionEvent",
    "HidInputReportEvent",
    "HidCollectionInfo",
    "HidReportInfo",
    "HidReportItem",
    "HidUnitSystem",
]
